--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.0",
     "next": "latest",
+    "next-auth": "^4.10.2",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
