--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "latest",
     "next-auth": "^4.10.2",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-select": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
