--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-auth": "^4.10.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.33.1",
     "react-select": "^5.4.0"
   },
   "devDependencies": {
