--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@headlessui/react": "^1.6.6",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.0",
+    "date-fns": "^2.29.1",
     "next": "latest",
     "next-auth": "^4.10.2",
     "react": "18.1.0",
